--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -1923,9 +1923,9 @@ ausgeführt:
   \begin{tabular}{c|ccc|c|cc}
     & 2 & 3 & 4& & 1 &5\\
     \toprule
-    1 & $\nicefrac{-3}{4}$ & 2 & $\nicefrac{-1}{4}$ & 3 &
+    1 & $-\nicefrac{3}{4}$ & 2 & $-\nicefrac{1}{4}$ & 3 &
        $\nicefrac{3}{4}$ & 0\\
-    5 & $\nicefrac{-1}{4}$ & 3 & $\nicefrac{-3}{4}$ & 5 & 0 &
+    5 & $-\nicefrac{1}{4}$ & 3 & $-\nicefrac{3}{4}$ & 5 & 0 &
        $\nicefrac{1}{4}$\\
     \bottomrule
     & $\nicefrac{17}{2}$ & -8 & $\nicefrac{11}{2}$ & 26 &
@@ -1946,6 +1946,61 @@ ausgeführt:
        =\frac{3}{2}\Rightarrow l=1
   \end{align*}
 \end{bsp}
+
+\begin{bsp}
+  Führt man den Basistausch mit $j=2, l=1$ durch, so erhält man:
+    \begin{tabular}{c|ccc|c|cc}
+    & 2 & 1 & 4& & 3 &5\\
+    \toprule
+    3 & $-\nicefrac{3}{8}$ & $\nicefrac{1}{2}$ & $-\nicefrac{1}{8}$ &
+	 $\nicefrac{3}{2}$ & $\nicefrac{1}{8}$ & 0\\
+    5 & $\nicefrac{7}{8}$ & $-\nicefrac{3}{2}$ & $-\nicefrac{3}{8}$ &
+	 $\nicefrac{1}{2}$ & $-\nicefrac{3}{8}$ & $\nicefrac{1}{4}$\\
+    \bottomrule
+    & $\nicefrac{1}{8}$ & $\nicefrac{23}{2}$ & $\nicefrac{21}{8}$ &
+	 $-\nicefrac{17}{2}$ & $-\nicefrac{19}{8}$ &1
+  \end{tabular}
+  Auch hier gilt, $x^{(1)}$ ist nicht entartet, da $x^{*}_{B}>0$. Das
+  Optimalitätskriterium ist nicht erfüllt, da $s_{N,1}<0$ und auch das
+  Unbeschränkheitskriterium ist nicht erfüllt, da nicht die gesamte
+  Spalte kleiner oder gleich Null ist.
+
+  Aus einem erneuten Basistausch mit $j=1, l=2$ resultiert das
+  folgende Tableau:
+  \begin{tabular}{c|ccc|c|cc}
+    & 2 & 1 & 4& & 3 &2\\
+    \toprule
+    3 & $-\nicefrac{3}{7}$ & $-\nicefrac{1}{7}$ & $-\nicefrac{2}{7}$ &
+	 $\nicefrac{12}{7}$ & $-\nicefrac{1}{28}$ & $\nicefrac{3}{28}$\\
+    2 & $\nicefrac{8}{7}$ & $-\nicefrac{12}{7}$ & $-\nicefrac{3}{7}$ &
+	 $\nicefrac{4}{7}$ & $-\nicefrac{3}{7}$ & $\nicefrac{2}{7}$\\
+    \bottomrule
+    & $\nicefrac{1}{7}$ & $\nicefrac{79}{7}$ & $-\nicefrac{60}{7}$ &
+	 $-\nicefrac{60}{7}$ & $-\nicefrac{65}{28}$ &$\nicefrac{27}{28}$
+  \end{tabular}
+  Das Optimalitätskriterium ist erfüllt. Somit ist die aktuelle Ecke
+  optimal.
+  \begin{align*}
+    x^{*}_{B} &= \begin{pmatrix}x^{*}_{2}\\x^{*}_{3}\end{pmatrix} =
+       \begin{pmatrix}\nicefrac{4}{7}\\\nicefrac{12}{7}\end{pmatrix} &
+       x^{*}_{N} &= \begin{pmatrix}x^{*}_{1}\\x^{*}_{4}
+          \\x^{*}_{5}\end{pmatrix} = \begin{pmatrix}0\\0\\0\end{pmatrix}
+  \end{align*}
+\end{bsp}
+
+Wir führen folgende, neue Bezeichnungen ein:
+\begin{align*}
+  \hat{A} &= A^{-1}_{B}A_{N} & \overline{A} &= A^{-1}_{B} &
+     \overline{x} &= x^{*}_{B}\\
+  \hat{s} &= s_{N} & \overline{z} &= z_{B} & \overline{y} &=
+     A^{-T}_{B} c_{B}
+\end{align*}
+
+Mit den neuen Bezeichnungen wählen wir zum Basistausch einen Index
+$\{1,\dotsc,n-m\}$ mit $\hat{s}_{j}<0$ und einen Index
+$l\in\{1,\dotsc,m\}$ mit $\frac{\overline{x}_{l}}{\hat{A}_{l,j}} =\min
+\Set{\frac{\overline{x}_{\nu}}{\hat{A}_{\nu,j}}| \nu\in\{\1,\dotsc,m\}
+\text{ mit } \hat{A}_{\nu,j}>0}$.
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
