* skript.ltex   + Herr Haberland ist gar nicht Professor.
  + Die Nummer der richtigen Vorlage verwendet.


git-svn-id: https://svn.lug-jena.de/uni-skripte@467 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -182,14 +182,14 @@
 \begin{document}
 
 \title{Einführung in die algebraische und analytische Zahlentheorie}
-\author{Prof. Dr. Haberland}
+\author{Dr.\,Klaus Haberland}
 \date{Semester: WS 2006/07}
 \maketitle
 
 \clearpage
 \chapter*{Vorwort}
 
-% entspricht Vorlage: 395
+% entspricht Vorlage: 426
 
 \begin{itshape}
   Dieses Dokument wurde als Skript für die auf der
